// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-toggle #render should render component as expected (1) 1`] = `
<gux-toggle>
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="false" aria-disabled="false" aria-label="Toggle Switch" class="gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (2) 1`] = `
<gux-toggle checked="">
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="true" aria-disabled="false" aria-label="Toggle Switch" class="gux-checked gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (3) 1`] = `
<gux-toggle checked="" disabled="">
  <mock:shadow-root>
    <div class="gux-disabled gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="true" aria-disabled="true" aria-label="Toggle Switch" class="gux-checked gux-disabled gux-toggle-slider" role="checkbox" tabindex="">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (4) 1`] = `
<gux-toggle checked-label="On" unchecked-label="Off">
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="false" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  Off
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                On
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                Off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (5) 1`] = `
<gux-toggle checked="" checked-label="on" unchecked-label="off">
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="true" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-checked gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  on
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                on
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (6) 1`] = `
<gux-toggle checked-label="On" label-position="left" unchecked-label="Off">
  <mock:shadow-root>
    <div class="gux-toggle-container gux-toggle-label-left">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="false" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  Off
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                On
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                Off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (7) 1`] = `
<gux-toggle checked="" checked-label="on" label-position="right" unchecked-label="off">
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="true" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-checked gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  on
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                on
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (8) 1`] = `
<gux-toggle checked-label="This is a long label for the toggle to test how it works" label-position="left" unchecked-label="This is another long label for the toggle to test how it works">
  <mock:shadow-root>
    <div class="gux-toggle-container gux-toggle-label-left">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="false" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  This is another long label for the toggle to test how it works
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                This is a long label for the toggle to test how it works
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                This is another long label for the toggle to test how it works
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;

exports[`gux-toggle #render should render component as expected (9) 1`] = `
<gux-toggle checked="" checked-label="This is a long label for the toggle to test how it works" label-position="right" unchecked-label="This is another long label for the toggle to test how it works">
  <mock:shadow-root>
    <div class="gux-toggle-container">
      <div class="gux-toggle-input">
        <gux-toggle-slider>
          <div aria-checked="true" aria-disabled="false" aria-labelledby="gux-toggle-label-i" class="gux-checked gux-toggle-slider" role="checkbox" tabindex="0">
            <div class="gux-slider">
              <div class="gux-switch">
                <gux-icon decorative="" icon-name="fa/check-solid"></gux-icon>
              </div>
            </div>
          </div>
        </gux-toggle-slider>
        <div class="gux-toggle-label-and-error">
          <div class="gux-toggle-label">
            <div class="gux-toggle-label-text">
              <span class="gux-toggle-label-text-inner">
                <span id="gux-toggle-label-i">
                  This is a long label for the toggle to test how it works
                </span>
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                This is a long label for the toggle to test how it works
              </span>
              <span class="gux-hidden gux-toggle-label-text-inner">
                This is another long label for the toggle to test how it works
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <gux-announce-beta></gux-announce-beta>
  </mock:shadow-root>
</gux-toggle>
`;
